# AI-Workbench

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.litellm  Makefile  PLAN_ELECTRON_REWRITE.md  README.md  UNSLOTH.md  chrome_launcher.py  config.json  config.py  docker-compose.litellm.yml  docker-compose.yml  litellm_config.yaml  llm_backend.py  pyproject.toml  usage_fetcher.py  usage_popup.py  widget.py
ai/: AI_INFRA.md  Dockerfile.kokoro-api  Dockerfile.kokoro-app  Dockerfile.litellm  Dockerfile.madlad-api  Dockerfile.madlad-app  Dockerfile.roofix-bridge  Dockerfile.roofix-scraper  GPU_SHARING_GUIDE.md  KOKORO.md  LITELLM.md  LITELLM_MCP.md  MADLAD.md  OAUTH2_PROXY.md  OPENWEBUI.md  ROOFIX.md  ROOFIX_BRIDGE.md  ROOFIX_SCRAPER.md  UNSLOTH.md  VLLM.md  docker-compose.kokoro.yml  docker-compose.litellm.yml  docker-compose.madlad.yml  docker-compose.oauth2-proxy.yml  docker-compose.openwebui.yml  docker-compose.quality-checker.yml  docker-compose.roofix-bridge.yml  docker-compose.roofix-scraper.yml  docker-compose.roofix.yml  docker-compose.unsloth.yml  docker-compose.vllm.yml  docker-compose.yml  entrypoint.sh  litellm_config.yaml  prometheus.yml
ai/classifier/: API.md  analysis.py  config.py  cv.py  llm.py  logger.py  main.py  models.py  scoring.py  store.py  workers.py
ai/madlad/app/: app.py  pyproject.toml
ai/roofix/scraper/: app.py  profile.py  pyproject.toml  scraper.py
claude_observer/: __main__.py  config.py  logging_setup.py
shared/common/: README.md  pyproject.toml
shared/common/src/common/: __init__.py  env.py  logging_setup.py
shared/common/src/common/cdp_interceptor/: __init__.py  client.py  launcher.py  sentinel.py  spy.py
shared/common/tests/: test_env.py  test_launcher_os_adaptive.py
widget/: USAGE_INTERCEPTOR.md  USAGE_WIDGET.md  claude_usage_widget.py  pyproject.toml  test_phoenix_spy.py
widget/cdp_interceptor/: __init__.py  cdp_session.py  client.py  launcher.py  spy.py
widget/claude_observer/: config.py  logging_setup.py
widget/claude_observer/browser/: fetcher.py
widget/claude_observer/core/: widget.py
widget/claude_observer/llm/: backend.py
widget/claude_observer/ui/: settings_dialog.py
(+49 files in other folders)
