[project]
name = "claude-usage-observer"
version = "0.1.0"
description = "System tray widget for monitoring Claude API usage"
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.85.0",
    "Pillow>=12.2.0",
    "pystray>=0.19.5",
    "requests>=2.33.1",
    "selenium>=4.43.0",
    "trio>=0.33.0",
    "trio-websocket>=0.12.2",
    "websocket-client>=1.9.0",
]

[project.scripts]
claude-usage-observer = "claude_observer.__main__:main"
cdp-spy               = "cdp_interceptor.spy:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["claude_observer*", "cdp_interceptor*"]

[tool.setuptools.package-data]
cdp_interceptor = ["interceptor.js"]
