[project]
name = "roofix-scraper"
version = "0.1.0"
description = "Scraper for Roofix proposal pages — CDP-based via common.cdp_interceptor"
requires-python = ">=3.11"
dependencies = [
    "common",
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-multipart",  # UploadFile support in FastAPI
]
